--- a/learning_diary/WEEK2.qmd
+++ b/learning_diary/WEEK2.qmd
@@ -6,7 +6,7 @@
 
 ### **Homework: Introduction to Hyperspectral Radiometer**
 
-[This website](https://xianlaiyin.github.io/learning_diary/docs/) and [this slide](https://xianlaiyin.github.io/week2_xaringan/week2_xaringan.html#1) can be used as a presentation of what I learnt the content of this week.
+This week I learnt how to use Quarto to create websites and Xaringan to create presentations. [This website](https://xianlaiyin.github.io/learning_diary/docs/) and [this slide](https://xianlaiyin.github.io/week2_xaringan/week2_xaringan.html#1) can be used as a presentation of what I learnt the content of this week.
 
 ```{r, echo = FALSE, out.width='40%'}
 xaringanExtra::embed_xaringan(
