--- a/learning_diary/index.qmd
+++ b/learning_diary/index.qmd
@@ -2,11 +2,15 @@
 
 ### **Introduction** {.unnumbered}
 
-***About this website***
-
-This website will include a summary of the content of CASA0023 Remotely Sensing Cities and Environments and my thoughts and ideas based on the content of the course.
+:::callout-tip
+#### Acknowledgements
 
 Many thanks to the lecturer [Dr Andrew MacLachlan](https://www.ucl.ac.uk/bartlett/casa/people/dr-andrew-maclachlan) and all [CASA teachers](https://www.ucl.ac.uk/bartlett/casa/people) for their contributions to this course.
+:::
+
+***About this website***
+
+This website will include a summary of the content of **CASA0023 Remotely Sensing Cities and Environments** and my thoughts and ideas based on the content of the course.
 
 ***About me***
 
@@ -19,7 +23,7 @@ I am very interested in the application of spatial data analysis in the field of
 ### **Content** {.unnumbered}
 
 | WEEK   | THEME                                                                                                        |
-|:---------------|--------------------------------------------------------|
+|:-----------------|------------------------------------------------------|
 | WEEK 1 | [An Introduction to Remote Sensing](https://xianlaiyin.github.io/learning_diary/docs/WEEK1.html)             |
 | WEEK 2 | [Portfolio tools: Xaringan and Quarto](https://xianlaiyin.github.io/learning_diary/docs/WEEK2.html)          |
 | WEEK 3 | [Remote sensing data](https://xianlaiyin.github.io/learning_diary/docs/WEEK3.html)                           |
