--- a/learning_diary/references.bib
+++ b/learning_diary/references.bib
@@ -68,3 +68,23 @@
 	note = {Publisher: American Association for the Advancement of Science},
 	pages = {850--853},
 }
+
+
+@article{erdem_okumus_evaluating_2021,
+	title = {Evaluating the role of urban fabric on surface urban heat island: {The} case of {Istanbul}},
+	volume = {73},
+	issn = {2210-6707},
+	shorttitle = {Evaluating the role of urban fabric on surface urban heat island},
+	url = {https://www.sciencedirect.com/science/article/pii/S2210670721004108},
+	doi = {10.1016/j.scs.2021.103128},
+	abstract = {Urban heat islands, one of the fundamental anthropogenic impacts on local climates, have been a growing concern especially for high-density urban areas such as Istanbul. This paper outlines the use of a supervised machine learning technique to understand the effects of the urban fabric on surface urban heat island (SUHI) formation in Istanbul, and identify effective variables to provide a basis for research and practice focusing on SUHI mitigation. An analysis using the Ridge Regression Model found that 71\% of land surface temperature anomalies in Istanbul are linked to building coverage ratio (BCR), surface/volume ratio (SVR), sky-view factor (SVF), canyon geometry factor (CGF), and vegetation index (NDVI). NDVI and BCR were the urban fabric components with the highest contribution to SUHI formation, while the effects of SVF and CGF remained relatively low. This research can help planners and designers gauge the contribution of the urban fabric to micro-climate issues and adapt SUHI mitigation strategies for projects aiming to build climate-sensitive urban environments. It also provides insight into and improves knowledge of supervised machine learning approaches to the urban planning and design disciplines.},
+	language = {en},
+	urldate = {2023-03-23},
+	journal = {Sustainable Cities and Society},
+	author = {Erdem Okumus, Deniz and Terzi, Fatih},
+	month = oct,
+	year = {2021},
+	keywords = {Istanbul, Land surface temperature, Ridge regression model, Surface urban heat island, Urban fabric},
+	pages = {103128},
+	file = {ScienceDirect Full Text PDF:C\:\\Users\\xianl\\Zotero\\storage\\99RWZ2TT\\Erdem Okumus 和 Terzi - 2021 - Evaluating the role of urban fabric on surface urb.pdf:application/pdf;ScienceDirect Snapshot:C\:\\Users\\xianl\\Zotero\\storage\\LCEDRVAQ\\S2210670721004108.html:text/html},
+}
