--- a/learning_diary/WEEK4.qmd
+++ b/learning_diary/WEEK4.qmd
@@ -15,7 +15,7 @@ This week focuses on the scenarios and application methods of various types of r
 ### **1.1 Using data from sensors**
 
 ::: callout-tip
-#### Example
+#### Example {.unnumbered}
 
 Multi-temporal land cover mapping, Spectral signatures / libraries, Change detection, Vegetation stress, Precipitation, Elevation models, Temperature, Night time lights, Forest fire monitoring, Pollution monitoring, Drought indices, Informal housing detection, Water level data monitoring, Building or network outlineextraction, Environmental monitoring, Estimations of resources, Air pollution and LULC, Urban green space, Disaster response and preparedness, Droughts monitoring, Forest fires analysis
 :::
@@ -53,7 +53,7 @@ Scattering can change based on wavelength, further penetration then the volume s
 A SAR signal has both `amplitude (backscatter)` and `phase` data
 
 ::: callout-tip
-#### Terms
+#### Terms {.unnumbered}
 
 -   Backscatter is the `portion of the outgoing radar signal` that the target redirects directly back towards the radar antenna
 -   The higher the backscattered intensity = rougher the surface. It is `"unitless"`
@@ -95,7 +95,7 @@ A SAR signal has both `amplitude (backscatter)` and `phase` data
 -   Monitoring displacement of ground - earthquakes etc
 
 ::: callout-tip
-#### Terms
+#### Terms {.unnumbered}
 
 -   `Coherence Map`: Coherence is defined as the degree of similarity of backscattering response (or reflection characteristic of as measured by the SAR sensor) between corresponding ground cells in both SAR image of an InSAR pair. Something is coherent when they are in phase (vibrate in unison)
 -   `Differential Interferometry Synthetic Aperture Radar (DInSAR)`: "quantification of the ground displacement that occurred between the two acquisitions can be achieved" through a "differential interferogram"
@@ -142,7 +142,7 @@ Metrics represent a generic feature space that facilitates regionalscale mapping
 -   The `time-sequential MODIS 32-dayinputs` were transformed to annual metrics to produce a more generalized feature space
 
 ::: callout-tip
-#### "a more generalized feature space"
+#### "a more generalized feature space" {.unnumbered}
 
 -   `Feature space` = scattergram of two bands (or things that have been made into bands)
 -   Can be used for very `basic classification` - selecting the values that represent land cover
@@ -250,12 +250,13 @@ In most of the previous examples the documents were created by the `metropolitan
 
 > The summary of the policy and city I have selected.
 
-:::callout-tip
-#### background
-Istanbul, the largest city in Turkey and connecting Europe and Asia, is scaling up its urban regeneration by joining the European Bank for Reconstruction and Development’s flagship EBRD Green Cities urban sustainability programme. Source: [EBRD](https://www.ebrd.com/news/2021/istanbul-joins-ebrd-green-cities-urban-sustainability-programme.html)
+::: callout-tip
+#### background {.unnumbered}
+
+Istanbul, the largest city in Turkey and connecting Europe and Asia, is scaling up its urban regeneration by joining the European Bank for Reconstruction and Development's flagship EBRD Green Cities urban sustainability programme. Source: [EBRD](https://www.ebrd.com/news/2021/istanbul-joins-ebrd-green-cities-urban-sustainability-programme.html)
 :::
 
-### **2.2 City**
+### **2.1 City**
 
 ***Istanbul***
 
@@ -265,40 +266,40 @@ Istanbul, the largest city in Turkey and connecting Europe and Asia, is scaling 
 
 ![İstanbul at a glance. Source: [Governership of Istanbul](http://en.istanbul.gov.tr/istanbul-at-a-glance)](img/ingilizce.png){width="100%"}
 
-***Environment challage***
+***Environment challange***
 
 Istanbul are faces many environmental problems.
 
-- **Urban expansion and land use change**: Istanbul has experienced rapid urbanisation in recent years, resulting in the expansion of the city and the replacement of green spaces and ecologically sensitive areas with built-up land. This land use change has had a negative impact on the urban ecosystem, such as a decline in biodiversity and destruction of natural habitats.
-- **Air pollution**: Istanbul has a growing air quality problem, mainly caused by traffic emissions, industrial emissions and fossil fuel combustion.
-- **Water management**: Water management issues in Istanbul include water scarcity, water quality pollution and deterioration of the water environment. With the growth of the city's population and industrial development, the conflict between water supply and demand has increased and the pressure on the water environment to carry water has increased.
-- **Urban heat island effect**: With the accelerated urbanisation, the density of buildings and roads in Istanbul is increasing, leading to a more pronounced urban heat island effect.
+-   **Urban expansion and land use change**: Istanbul has experienced rapid urbanisation in recent years, resulting in the expansion of the city and the replacement of green spaces and ecologically sensitive areas with built-up land. This land use change has had a negative impact on the urban ecosystem, such as a decline in biodiversity and destruction of natural habitats.
+-   **Air pollution**: Istanbul has a growing air quality problem, mainly caused by traffic emissions, industrial emissions and fossil fuel combustion.
+-   **Water management**: Water management issues in Istanbul include water scarcity, water quality pollution and deterioration of the water environment. With the growth of the city's population and industrial development, the conflict between water supply and demand has increased and the pressure on the water environment to carry water has increased.
+-   **Urban heat island effect**: With the accelerated urbanisation, the density of buildings and roads in Istanbul is increasing, leading to a more pronounced urban heat island effect.
 
 **Therefore, the implementation of a green city plan is urgent.**
 
-### **2.1 Policy**
+### **2.2 Policy**
 
 ***EBRD Green Cities***
 
 To address environmental challenges, the EBRD developed [EBRD Green Cities](https://www.ebrdgreencities.com/), with the aim of building a better and more sustainable future for cities and their residents. The programme has three central components:
 
-- Green City Action Plans (GCAPs): Assessing and prioritising environmental challenges, and developing an action plan to tackle these challenges through policy interventions and sustainable infrastructure investments.
-- Sustainable infrastructure investment: Facilitating and stimulating public or private green investments in: water and wastewater, urban transport, district energy, energy efficiency in buildings, solid waste and other interventions that improve the city’s adaptation and resilience to climate shocks.
-- Capacity-building: Providing technical support to city administrators and local stakeholders to ensure that infrastructure investments and policy measures identified in GCAPs can be developed, implemented and monitored effectively.
+-   Green City Action Plans (GCAPs): Assessing and prioritising environmental challenges, and developing an action plan to tackle these challenges through policy interventions and sustainable infrastructure investments.
+-   Sustainable infrastructure investment: Facilitating and stimulating public or private green investments in: water and wastewater, urban transport, district energy, energy efficiency in buildings, solid waste and other interventions that improve the city's adaptation and resilience to climate shocks.
+-   Capacity-building: Providing technical support to city administrators and local stakeholders to ensure that infrastructure investments and policy measures identified in GCAPs can be developed, implemented and monitored effectively.
 
 EBRD Green city aims to:
 
-- Preserve the quality of environmental assets (air, water, land and biodiversity) and use these resources sustainably.
-- Mitigate and adapt to the risks of climate change.
-- Ensure that environmental policies and developments contribute to the social and economic well-being of residents.
+-   Preserve the quality of environmental assets (air, water, land and biodiversity) and use these resources sustainably.
+-   Mitigate and adapt to the risks of climate change.
+-   Ensure that environmental policies and developments contribute to the social and economic well-being of residents.
 
 The path to becoming a Green City is continuous, allowing cities to adjust their strategic goals and visions over time. The process has three key stages:
 
-- Developing a Green City Action Plan (GCAP)
-  - Identifying and prioritising challenges
-  - Planning actions
-- Implementing the GCAP
-- Monitoring THE GCAP
+-   Developing a Green City Action Plan (GCAP)
+    -   Identifying and prioritising challenges
+    -   Planning actions
+-   Implementing the GCAP
+-   Monitoring THE GCAP
 
 ```{r, echo = FALSE, out.width='100%'}
 xaringanExtra::embed_xaringan(
@@ -306,19 +307,18 @@ xaringanExtra::embed_xaringan(
   ratio = "16:9")
 ```
 
-
 ## **3 Application**
 
 > How the remotely sensed data you sourced could be used to assist with contributing to the policy goal. How could the data be applied to solve the policy challenge.
 
-According to EBRD Green city，The first step in developing a GCAP involves assessing the city’s environmental performance using 35 core indicators that cover a wide range of urban issues. The indicators evaluate the state of the city’s environmental assets, its overall resource efficiency and climate change risks. **Therefore, the remote sensing data could be applied to evaluate and monitor the city’s environmental performance.**
+According to EBRD Green city，The first step in developing a GCAP involves assessing the city's environmental performance using 35 core indicators that cover a wide range of urban issues. The indicators evaluate the state of the city's environmental assets, its overall resource efficiency and climate change risks. **Therefore, the remote sensing data could be applied to evaluate and monitor the city's environmental performance.**
 
 *Due to the large number of indicators, we are unable to discuss them all here, so we are analysing the environmental issues that stand out in Istanbul.*
 
-- **Urban expansion and land use change**: By classifying and detecting land cover changes from remote sensing imagery over multiple time periods, the rate of urban expansion, land use changes and ecological impacts in Istanbul can be assessed. Land use type classification using `Landsat` or `Sentinel-2` satellite data combined with classification algorithms (e.g. support vector machines, random forests, etc.).
-- **Air pollution**: Use remote sensing data to monitor concentrations of atmospheric pollutants (e.g. nitrogen oxides, particulate matter, etc.) and to assess the air quality status of Istanbul. Air pollutant concentrations are monitored using satellite data such as `MODIS` and `Sentinel-5P`, combined with air pollutant inversion methods.
-- **Water management**: The extraction of hydrological parameters from remote sensing data, such as the area of water bodies, suspended sediment concentrations and chlorophyll a concentrations, allows the assessment of water resource status and water pollution in Istanbul. In addition, `synthetic Aperture Radar (SAR)` data can be used to detect water environment problems such as oil pollution on water surfaces.
-- **Urban heat island effect**: Remote sensing data is used to calculate surface temperatures and to analyse the distribution and influencing factors of the urban heat island effect. `Landsat` and `MODIS` data are used in conjunction with surface temperature inversion methods to assess the urban heat island effect in Istanbul.
+-   **Urban expansion and land use change**: By classifying and detecting land cover changes from remote sensing imagery over multiple time periods, the rate of urban expansion, land use changes and ecological impacts in Istanbul can be assessed. Land use type classification using `Landsat` or `Sentinel-2` satellite data combined with classification algorithms (e.g. support vector machines, random forests, etc.).
+-   **Air pollution**: Use remote sensing data to monitor concentrations of atmospheric pollutants (e.g. nitrogen oxides, particulate matter, etc.) and to assess the air quality status of Istanbul. Air pollutant concentrations are monitored using satellite data such as `MODIS` and `Sentinel-5P`, combined with air pollutant inversion methods.
+-   **Water management**: The extraction of hydrological parameters from remote sensing data, such as the area of water bodies, suspended sediment concentrations and chlorophyll a concentrations, allows the assessment of water resource status and water pollution in Istanbul. In addition, `synthetic Aperture Radar (SAR)` data can be used to detect water environment problems such as oil pollution on water surfaces.
+-   **Urban heat island effect**: Remote sensing data is used to calculate surface temperatures and to analyse the distribution and influencing factors of the urban heat island effect. `Landsat` and `MODIS` data are used in conjunction with surface temperature inversion methods to assess the urban heat island effect in Istanbul.
 
 ![land surface temperature (LST) distribution (a) and map of the Surface Urban Heat Island (SUHI) effect (b) on 25th July 2017 in Istanbul. LST anomalies above the average (34.73 °C) indicate the SUHI effect at various levels. Source: @erdem_okumus_evaluating_2021](img/1-s2.0-S2210670721004108-gr4.jpg){width="100%"}
 
@@ -327,3 +327,5 @@ According to EBRD Green city，The first step in developing a GCAP involves asse
 > What I have learnt in relation to the policy, city and the application of the data.
 
 Through this week's study, I learnt about the scenarios and application methods of remote sensing images, as well as many different levels of policies related to remote sensing. In the process of learning, I gradually found out the role that remote sensing imagery can play in urban policy: `assessment` and `monitoring`. Remote sensing images can provide a wealth of information to assist in decision making, but on the other hand they also need to be responsive to policy in order to create value. As the EBRD Green city also provides over [50 policy tools](https://www.ebrdgreencities.com/policy-tool/) to help promote and implement policy. It is only when the application of remote sensing data is closely aligned with urban policy that the information can be used to maximum effect.
+
+In the field of urban planning, remote sensing data is even more closely integrated with policies, for example, \[the evaluation of the carrying capacity of resources and environment and the suitability of territorial spatial development\] launched in China in recent years, which is guided by policies, using various types of data including remote sensing data to evaluate the development of territorial space. Meanwhile, the results obtained from remote sensing data often rely on policy tools such as urban planning for implementation.
