--- a/learning_diary/WEEK5.qmd
+++ b/learning_diary/WEEK5.qmd
@@ -4,3 +4,50 @@
 
 > This is a learning diary of CASA0023 WEEK 5, the lecture presentation is [here](https://andrewmaclachlan.github.io/CASA0023-lecture-5/#1), and the practical material is [here](https://andrewmaclachlan.github.io/CASA0023/5_GEE_I.html).
 
+## **1 Summary: lecture**
+
+This week focuses on .
+
+![Mindmap of Week 4 Leacture](img/WEEK4_Mindmap.svg){width="100%"}
+
+------------------------------------------------------------------------
+
+### **1.1 Synthetic Aperture Radar (SAR)**
+
+#### **SAR background** {.unnumbered}
+
+## **2 Summary: practical**
+
+> This week's practical will consist mainly of the following:
+>
+> -   Introduction and access to Landsat data
+> -   A deeper understanding of atmospheric correction and how it works in practice
+> -   Introduction to the principles of Radiance (or DN) to Reflectance
+> -   Practical exercises in image joining
+> -   A deep understanding of image enhancement and how it works in practice
+
+For this week's practical I chose to follow the guidance using Landsat data from Cape Town. I used R to do atmospheric corrections, merging, data enhancement and other operations on the data. Through practical, I gained a better understanding of remote sensing data pre-processing and was able to apply this to my workflow in R. Combined with the previous term's CASA0005 course, I can now use R to analyse more types of data.
+
+![Texture of landsat data from Cape Town](img/my_plot.png){width="100%"}
+
+## **3 Application**
+
+> This week, the main focus was on the correction, joining and enhancement of remote sensing images, mostly applied to pre-processing before analysis, but remote sensing image enhancement has a wider range of applications.
+
+### **3.1 Applications of remote sensing image enhancement**
+
+### **3.2 Application case**
+
+::: callout-tip
+#### Sourse {.unnumbered}
+
+***PCA‐based land‐use change detection and analysis using multitemporal and multisensor satellite data*** , *Sourse: @deng_pcabased_2008*
+:::
+
+### **3.3 Case comments**
+
+***Advantages or contribution***
+
+***Disadvantages or potential***
+
+## **4 Reflection**
