--- a/learning_diary/index.qmd
+++ b/learning_diary/index.qmd
@@ -2,8 +2,8 @@
 
 ### **Introduction** {.unnumbered}
 
-:::callout-tip
-#### Acknowledgements
+::: callout-tip
+#### Acknowledgements {.unnumbered}
 
 Many thanks to the lecturer [Dr Andrew MacLachlan](https://www.ucl.ac.uk/bartlett/casa/people/dr-andrew-maclachlan) and all [CASA teachers](https://www.ucl.ac.uk/bartlett/casa/people) for their contributions to this course.
 :::
@@ -23,7 +23,7 @@ I am very interested in the application of spatial data analysis in the field of
 ### **Content** {.unnumbered}
 
 | WEEK   | THEME                                                                                                        |
-|:-----------------|------------------------------------------------------|
+|:------------------|-----------------------------------------------------|
 | WEEK 1 | [An Introduction to Remote Sensing](https://xianlaiyin.github.io/learning_diary/docs/WEEK1.html)             |
 | WEEK 2 | [Portfolio tools: Xaringan and Quarto](https://xianlaiyin.github.io/learning_diary/docs/WEEK2.html)          |
 | WEEK 3 | [Remote sensing data](https://xianlaiyin.github.io/learning_diary/docs/WEEK3.html)                           |
